Kubernetes-Manifest/02-uptime-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uptime-v1
  labels:
    app: uptime
    env: test
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: uptime
      env: test
  template:
    metadata:
      labels:
        app: uptime
        env: test
    spec:
      containers:
      - name: uptime-test
        image: niketchandra/66uptime:v1
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "250m"
