Kubernetes-Manifest/01-db-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  labels:
    app: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:5.7
        ports:
        - containerPort: 3306
        # resources:
        #   requests:
        #     memory: "256Mi"
        #     cpu: "250m"
        #   limits:
        #     memory: "512Mi"
        #     cpu: "500m"
---

apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  labels:
    app: mysql
spec:
  selector:
    app: mysql
  ports:
  - protocol: TCP
    port: 3306 # Internal port to be exposed
    targetPort: 3306  # MySQL container's port
