Kubernetes-Manifest/03-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: uptime-service
  labels:
    app: uptime
    env: test
spec:
  type: LoadBalancer
  selector:
    app: uptime
    env: test
  ports:
    - protocol: TCP
      port: 80     # Internal cluster port
      targetPort: 80 # Port on the container
