Kubernetes-Manifest/04-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-uptime
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: monitor.abc.live
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: uptime-service
                port:
                  number: 80
